Implement total annual leave calculation for multi-year employees